# pycon2024-sandbox

./: .gitignore  README.md
kill_gil/: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  supervisord.conf
kill_gil/src/: conf.py  example_async.py  example_multi_proc_private_memory.py  example_multi_proc_shared_lock_memory.py  example_multi_proc_shared_memory.py  example_multi_thread_private_memory.py  example_multi_thread_shared_lock_memory.py  example_multi_thread_shared_memory.py  example_sync.py
llm_structure_output/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
llm_structure_output/src/: example_instructor.py
